Fix alignment and text-backgroung image

--- a/css/about.css
+++ b/css/about.css
@@ -47,7 +47,12 @@ li {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
   padding-bottom: 2.8125rem;
+}
+
+.main_section_text {
+  text-align: center;
 }
 
 .about_logo_section {
